# Truth-Table-o-Matic

./: Logging.hs  Logical.hs  README.md  Render.hs  Truth-Table-o-Matic.cabal  TruthTable.hs  WFF.hs  main.hs
app/: Main.hs  Render.hs  WFF.hs
lib/: Latex.hs  Logging.hs  Logical.hs  Render.hs  TruthTable.hs  WFF.hs  WFFParser.hs
