cabal-version:      2.4
name:               Truth-Table-o-Matic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             olligobber
maintainer:         sirolligobbervii@yahoo.com.au

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

common shared-properties
    default-language:   Haskell2010
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-missing-import-lists
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-exported-signatures
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-deriving-strategies
                        -Wno-prepositive-qualified-module
                        -Wno-tabs

library
    import:           shared-properties
    exposed-modules:  Logging
                      Logical
                      Render
                      TruthTable
                      WFF
                      WFFParser
    hs-source-dirs:   lib
    build-depends:    base ^>= 4.15
                    , text ^>= 2.1
                    , containers ^>= 0.7
                    , mtl ^>= 2.2
                    , parsec ^>= 3.1

executable Truth-Table-o-Matic
    import:           shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.15
                    , text ^>= 2.1
                    , mtl ^>= 2.2
                    , Truth-Table-o-Matic
    hs-source-dirs:   app
    default-language: Haskell2010
