cabal-version: 2.4
name: Truth-Table-o-Matic
version: 0.2

author: olligobber
maintainer: sirolligobbervii@yahoo.com.au

extra-source-files: README.md

common shared-properties
	default-language: Haskell2010
	extensions:
		TypeApplications
		OverloadedStrings
	ghc-options:
		-Weverything
		-Wno-implicit-prelude
		-Wno-missed-specialisations
		-Wno-all-missed-specialisations
		-Wno-missing-import-lists
		-Wno-unsafe
		-Wno-safe
		-Wno-missing-exported-signatures
		-Wno-missing-safe-haskell-mode
		-Wno-missing-deriving-strategies
		-Wno-prepositive-qualified-module
		-Wno-tabs

library
	import: shared-properties
	exposed-modules:
		Latex
		Logging
		Logical
		Render
		TruthTable
		WFF
		WFFParser
	hs-source-dirs: lib
	build-depends:
		  base ^>= 4.15
		, text ^>= 2.0
		, containers ^>= 0.6
		, mtl ^>= 2.2
		, parsec ^>= 3.1
		, HaTeX ^>= 3.22.4
		, temporary ^>= 1.3
		, filepath ^>= 1.4.100
		, directory ^>= 1.3.8
		, process ^>= 1.6.18

executable ttom
	import: shared-properties
	main-is: Main.hs
	build-depends:
		  base ^>= 4.15
		, text ^>= 2.0
		, mtl ^>= 2.2
		, Truth-Table-o-Matic
	hs-source-dirs: app
	default-language: Haskell2010
